FIX: Removed center align default for icon

--- a/src/components/base/Icon/Icon.css
+++ b/src/components/base/Icon/Icon.css
@@ -2,7 +2,6 @@
   transition: all ease-in-out 250ms;
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
   padding: 1rem;
   width: min-content;
